[package]
name = "query-rds-data"
version = "4.0.0"
authors = ["Bruce Adams <bruce.adams@acm.org>"]
edition = "2021"
categories = ["database", "command-line-utilities"]
description = "Query AWS RDS Data from the command line"
homepage = "https://github.com/bruceadams/query-rds-data"
keywords = ["aws", "cli", "database", "rds", "sql"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/bruceadams/query-rds-data"

[dependencies]
anyhow = "1.0.79"
aws-config = "1.1.5"
aws-sdk-rds = "1.16.0"
aws-sdk-rdsdata = "1.13.0"
aws-sdk-secretsmanager = "1.15.0"
aws-types = "1.1.5"
csv = "1.3.0"
futures = "0.3.30"
serde_json = "1.0.113"
tracing = "0.1.40"

[dependencies.clap]
features = ["cargo", "derive", "env", "wrap_help"]
version = "4.5.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.196"

[dependencies.tokio]
version = "1.36.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.18"
